// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./InitialsAvatar.stories AllSizes 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-4"
    >
      <div
        class="initialsAvatar"
        style="background-color: rgb(194, 115, 66); width: 20px; height: 20px; min-width: 20px; min-height: 20px; flex-shrink: 0; border-radius: 6px;"
      >
        S
      </div>
      <div
        class="initialsAvatar"
        style="background-color: rgb(194, 115, 66); width: 24px; height: 24px; min-width: 24px; min-height: 24px; flex-shrink: 0; border-radius: 6px;"
      >
        S
      </div>
      <div
        class="initialsAvatar"
        style="background-color: rgb(194, 115, 66); width: 32px; height: 32px; min-width: 32px; min-height: 32px; flex-shrink: 0; border-radius: 6px;"
      >
        S
      </div>
      <div
        class="initialsAvatar"
        style="background-color: rgb(194, 115, 66); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
      >
        S
      </div>
    </div>
  </div>
</div>
`;

exports[`./InitialsAvatar.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="initialsAvatar"
      style="background-color: rgb(107, 143, 61); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
    >
      S
    </div>
  </div>
</div>
`;

exports[`./InitialsAvatar.stories DifferentNames 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="flex items-center gap-4"
    >
      <div
        class="initialsAvatar"
        style="background-color: rgb(76, 199, 72); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
      >
        A
      </div>
      <div
        class="initialsAvatar"
        style="background-color: rgb(180, 114, 227); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
      >
        B
      </div>
      <div
        class="initialsAvatar"
        style="background-color: rgb(201, 74, 125); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
      >
        C
      </div>
      <div
        class="initialsAvatar"
        style="background-color: rgb(75, 196, 69); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
      >
        D
      </div>
      <div
        class="initialsAvatar"
        style="background-color: rgb(162, 64, 186); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
      >
        E
      </div>
    </div>
  </div>
</div>
`;

exports[`./InitialsAvatar.stories Large 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="initialsAvatar"
      style="background-color: rgb(107, 143, 61); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 6px;"
    >
      S
    </div>
  </div>
</div>
`;

exports[`./InitialsAvatar.stories Medium 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="initialsAvatar"
      style="background-color: rgb(107, 143, 61); width: 32px; height: 32px; min-width: 32px; min-height: 32px; flex-shrink: 0; border-radius: 6px;"
    >
      S
    </div>
  </div>
</div>
`;

exports[`./InitialsAvatar.stories Rounded 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="initialsAvatar"
      style="background-color: rgb(107, 143, 61); width: 48px; height: 48px; min-width: 48px; min-height: 48px; flex-shrink: 0; border-radius: 50%;"
    >
      S
    </div>
  </div>
</div>
`;

exports[`./InitialsAvatar.stories Small 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="initialsAvatar"
      style="background-color: rgb(107, 143, 61); width: 24px; height: 24px; min-width: 24px; min-height: 24px; flex-shrink: 0; border-radius: 6px;"
    >
      S
    </div>
  </div>
</div>
`;

exports[`./InitialsAvatar.stories XSmall 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="initialsAvatar"
      style="background-color: rgb(107, 143, 61); width: 20px; height: 20px; min-width: 20px; min-height: 20px; flex-shrink: 0; border-radius: 6px;"
    >
      S
    </div>
  </div>
</div>
`;
